[package]
name = "untron-fulfiller"
version = "0.1.0"
edition = "2021"


[dependencies]
untron-relayer = { path = "../relayer" }
tokio = { version = "1.39.2", features = ["full"] }
ethers = { version = "2.0.14", features = ["ws"] }
zksync-web3-rs = "0.1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
hex = "0.4.3"
bincode = "1.3.3"