[package]
name = "untron-relayer"
version = "0.1.0"
edition = "2021"


[dependencies]
sp1-sdk = "1.2.0"
untron-program = { path = "../program" }
tonic = { version = "0.12.1", features = ["prost"] }
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39.2", features = ["full"] }
ethers = { version = "2.0.14", features = ["ws"] }
zksync-web3-rs = "0.1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
hex = "0.4.3"
bincode = "1.3.3"
hex-literal = "0.4.1"

[build-dependencies]
tonic-build = "0.12.1"
sp1-build = "1.2.0"
