[package]
name = "relayerware"
version = "0.1.0"
edition = "2021"


[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
zktron = { path = "../circuits/zktron" }
tonic = { version = "0.12.1", features = ["prost"] }
prost = "0.13.1"
prost-types = "0.13.1"

[build-dependencies]
tonic-build = "0.12.1"