[package]
name = "untron-relayer"
version = "0.1.0"
edition = "2021"


[dependencies]
sp1-sdk = "1.1.0"
untron-program = { path = "../program" }
tonic = { version = "0.12.1", features = ["prost"] }
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39.2", features = ["full"] }
ethers = "2.0.14"

[build-dependencies]
tonic-build = "0.12.1"
