[package]
name = "untron-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
ethers = { version = "2.0.0", features = ["abigen"] }
untron-program = { path = "../program" }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
toml = "0.8.19"
